--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,13 @@
       content="Web site created using create-react-app"
     />
     <style>
-      body {
-        background-image: url("./bg.jpg");
+      body,
+      html {
+        background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.9),
+          rgba(0, 0, 0, 0.4)
+        );
         background-size: cover;
       }
       #form2,
